RESOLVED FIXED157516
Fix the !ENABLE(CSS_REGIONS) build after r198990
https://bugs.webkit.org/show_bug.cgi?id=157516
Summary Fix the !ENABLE(CSS_REGIONS) build after r198990
Csaba Osztrogonác
Reported 2016-05-10 07:53:30 PDT
../../Source/WebCore/style/StyleTreeResolver.cpp: In function 'bool WebCore::Style::affectsRenderedSubtree(WebCore::Element&, const WebCore::RenderStyle&)': ../../Source/WebCore/style/StyleTreeResolver.cpp:179:17: error: 'class WebCore::Element' has no member named 'shouldMoveToFlowThread' shouldMoveToFlowThread is declared inside ENABLE(CSS_REGIONS) guard, we shouldn't call it unconditionally.
Attachments
Patch (1.28 KB, patch)
2016-05-10 07:54 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-05-10 07:54:32 PDT
WebKit Commit Bot
Comment 2 2016-05-10 12:07:39 PDT
Comment on attachment 278491 [details] Patch Clearing flags on attachment: 278491 Committed r200633: <http://trac.webkit.org/changeset/200633>
WebKit Commit Bot
Comment 3 2016-05-10 12:07:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.