Fix the !ENABLE(CSS_REGIONS) build after r198990 https://bugs.webkit.org/show_bug.cgi?id=157516

Reviewed by Ryosuke Niwa.

* style/StyleTreeResolver.cpp:
(WebCore::Style::affectsRenderedSubtree):


Canonical link: https://commits.webkit.org/175662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200633 268f45cc-cd09-0410-ab3c-d52691b4dbfc